アイキャッチのテスト

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
+    <!-- アイキャッチ設定ここから -->
+    <meta property="og:title" content="松井ふゆこのポートフォリオ" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ueda-shinya.github.io/portfolio_green/index.html" />
+    <meta property="og:image" content="https://ueda-shinya.github.io/portfolio_green/img/toranya-smile.png" />
+    <meta property="og:site_name" content="松井ふゆこのポートフォリオ" />
+    <meta property="og:description" content="松井ふゆこのポートフォリオでアイキャッチのテストしました" />
+    <!-- アイキャッチ設定ここまで -->   
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -37,7 +45,7 @@
         <p class="pr">ここに自己紹介を書きます。ここに自己紹介を書きます。ここに自己紹介を書きます。ここに自己紹介を書きます。</p>
         <p class="email">support@techis.io</p>
         <div class="sns">
-            <a href="#">
+            <a href="https://github.com/ueda-shinya/portfolio_green">
                 <img class="git" src="./img/git.svg">
             </a>
             <a href="#">
