アイキャッチの画像変更

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta property="og:title" content="松井ふゆこのポートフォリオ" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ueda-shinya.github.io/portfolio_green/index.html" />
-    <meta property="og:image" content="https://ueda-shinya.github.io/portfolio_green/img/toranya-smile.png" />
+    <meta property="og:image" content="https://ueda-shinya.github.io/portfolio_green/img/portfolio_green.jpg" />
     <meta property="og:site_name" content="松井ふゆこのポートフォリオ" />
     <meta property="og:description" content="松井ふゆこのポートフォリオでアイキャッチのテストしました" />
     <!-- アイキャッチ設定ここまで -->   
